--- a/src/Views/admin/support/list.twig
+++ b/src/Views/admin/support/list.twig
@@ -1,33 +1,40 @@
 {% extends 'layouts/main.twig' %}
+{% block styles %}
+    <link rel="stylesheet" href="/assets/css/admin/global_list.css">
+{% endblock %}
 
 {% block content %}
-<div class="admin-support-list">
-    <h1>Atendimentos de Suporte</h1>
-    <table class="table-support-chats">
-        <thead>
-            <tr>
-                <th>Usuário</th>
-                <th>Última Mensagem</th>
-                <th>Data/Hora</th>
-                <th>Ação</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for chat in chats %}
-            <tr>
-                <td>{{ chat.user_name }}</td>
-                <td>{{ chat.last_message|slice(0, 60) ~ (chat.last_message|length > 60 ? '...' : '') }}</td>
-                <td>{{ chat.last_time|date('d/m/Y H:i') }}</td>
-                <td>
-                    <a href="/admin/support/chats/{{ chat.chat_id }}" class="btn btn-primary">Abrir</a>
-                </td>
-            </tr>
-            {% else %}
-            <tr>
-                <td colspan="4">Nenhum atendimento encontrado.</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+<div class="admin-list-container">
+    <div class="admin-list-header">
+        <h1 class="admin-list-title">Atendimentos de Suporte</h1>
+    </div>
+    <div class="admin-list-table-wrapper">
+        <table class="admin-list-table">
+            <thead>
+                <tr> 
+                    <th>Usuário</th>
+                    <th>Última Mensagem</th>
+                    <th>Data/Hora</th>
+                    <th>Ação</th>
+                </tr> 
+            </thead>
+            <tbody>
+                {% for chat in chats %}
+                <tr>
+                    <td>{{ chat.user_name }}</td>
+                    <td>{{ chat.last_message|slice(0, 60) ~ (chat.last_message|length > 60 ? '...' : '') }}</td>
+                    <td>{{ chat.last_time|date('d/m/Y H:i') }}</td>
+                    <td>
+                        <a href="/admin/support/chats/{{ chat.chat_id }}" class="btn btn-primary">Abrir</a>
+                    </td>
+                </tr>
+                {% else %}
+                <tr>
+                    <td colspan="4">Nenhum atendimento encontrado.</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </div>
 {% endblock %}
